# reservoir-mesh-vtk

./: .gitignore  CMakeLists.txt  DarcySimulations.cpp  DarcySpaces.cpp  TestErick.code-workspace  \\wsl.localhost\\Ubuntu-22.04\\home\\erick\\dev\\Gmsh\\TestErick\\gmsh\\wellPlusReservoir.msh  biggerBox.msh  mainDarcy.cpp  meshVisualization.cpp  nearReservoir.msh  wann3d_reservoirTest.json.json
gmsh/: Mesh3D_JSONReader.py  Mesh3D_Reser_Box copy.py  Mesh3D_Reser_Box test copy.py  Mesh3D_Reser_Box test.py  Mesh3D_Reser_Box.py  Moving_Reservoir.msh  Moving_Reservoircopy.msh  biggerBox.msh  delete.py  file.msh  mesh3D_Reser_.py  mesh3D_rev08_test.msh  meu_modelo.msh  nearWell.geo  nearWellPlusReservoir.geo  wellPlusReservoir.geo  wellPlusReservoir.msh  wellPlusReservoir.py
gmsh/images/: wellbore  wellbore_lines
